--- a/HTML/2019.11.01/WebContent/Ex22_form_tag1.html
+++ b/HTML/2019.11.01/WebContent/Ex22_form_tag1.html
@@ -116,6 +116,8 @@
 		<!-- 범위바 : 0 ~ 100 사이 10 단위로 표시 -->
 		범위 : <input type="range" min="0" max="100" step="10" />
 		
+		<!-- 파일 첨부 -->
+		첨부파일 : <input type = "file" />
 	</form>
 </body>
 </html>
