--- a/javascript/2019.11.21/WebContent/10_Event/06_디폴트_이벤트.html
+++ b/javascript/2019.11.21/WebContent/10_Event/06_디폴트_이벤트.html
@@ -2,14 +2,48 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>디폴트 이벤트</title>
+<title>디폴트이벤트</title>
 <script type="text/javascript">
-	//디폴트 이벤트 (기본이벤트)
+
+	// 디폴트이벤트 (기본이벤트)
 	// 1. 폼을 submit 하면 모든 폼 요소를 보내고, 초기화한다.
 	// 2. <a> 태그를 클릭하면 페이지 이동한다.
+	
+	window.onload = function() {
+		// 1. 폼 submit 방지
+		var form = document.getElementById("form");
+		form.onsubmit = function( e ) {
+			if ( e ) {	// 모던 브라우저
+				e.preventDefault();
+			}else {
+				//구 IE (8이하 )
+				window.event.returnValue = false;
+			}
+		}
+		// 2. <a> 태그 이동 방지
+		
+			var a = document.getElementById("a");
+		a.onclick = function( e ) {
+			if ( e ) {	// 모던 브라우저
+				e.preventDefault();
+			}else {
+				//구 IE (8이하 )
+				window.event.returnValue = false;
+			}
+		}
+	}
+	
+	
+	
 </script>
 </head>
 <body>
-
+	<form id="form" action="#">
+		<input type="text" />
+		<input type="submit" />
+	</form>
+	<br />
+	<a id="a" href="http://www.google.com">구글로 이동</a>
 </body>
 </html>
+
